--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,30 +1,29 @@
 .footer {
+  padding-top: 67px;
+  padding-bottom: 60px;
   max-width: 880px;
-  margin: 68px auto 60px;
-  display: flex;
-  justify-content: flex-start;
+  margin: 0 auto;
 }
-
-.footer__signature {
-  width: 318px;
-  height: 22px;
-  color: #545454;
-  font-family: Inter;
+.footer__copyright {
+  font-family: "Inter", Arial, sans-serif;
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  line-height: 1.21;
+  color: #545454;
 }
-
-@media screen and (min-width: 320px) and (max-width: 970px) {
+@media screen and (max-width: 1024px) {
   .footer {
-    width: 282px;
-    margin: 50px auto 36px;
-    display: flex;
-    justify-content: flex-start;
+    padding-top: 56px;
+    padding-bottom: 42px;
+    max-width: 700px;
   }
-  .footer__signature {
+}
+@media screen and (max-width: 720px) {
+  .footer {
+    padding-top: 50px;
+    padding-bottom: 36px;
+    max-width: 282px;
+  }
+  .footer__copyright {
     font-size: 14px;
-    line-height: normal;
   }
 }
