--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -1,34 +1,26 @@
 .header {
   max-width: 880px;
-  height: 74px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 44.96px 0 40px;
   margin: 0 auto;
+  padding-top: 45px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid #545454;
 }
 
-.logo {
-  position: absolute;
-}
-
-.header__line {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 1px;
-  margin: 0;
-  border-color: #545454;
-  opacity: 0.7;
-  background: #545454;
-}
-
-@media screen and (min-width: 320px) and (max-width: 970px) {
+@media screen and (max-width: 1024px) {
   .header {
-    max-width: 100%;
+    max-width: 700px;
+    padding-top: 38px;
+    padding-bottom: 38px;
   }
-
-  .logo {
-    left: 27.04px;
+}
+@media screen and (max-width: 720px) {
+  .header {
+    max-width: 282px;
+    margin: 0 auto;
+    padding-top: 28px;
+    padding-bottom: 32px;
+  }
+  .header__logo {
+    width: 126px;
   }
 }
