--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,29 +1,23 @@
 .footer {
-  padding-top: 67px;
-  padding-bottom: 60px;
   max-width: 880px;
-  margin: 0 auto;
-}
-.footer__copyright {
-  font-family: "Inter", Arial, sans-serif;
+  width: 100%;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 1.21;
+  line-height: 21.78px;
   color: #545454;
+  padding-top: 66px;
+  padding-bottom: 60px;
 }
-@media screen and (max-width: 1024px) {
-  .footer {
-    padding-top: 56px;
-    padding-bottom: 42px;
-    max-width: 700px;
+
+
+@media screen and (max-width: 320px){
+  .footer{
+    width: 100%;
   }
 }
-@media screen and (max-width: 720px) {
-  .footer {
-    padding-top: 50px;
-    padding-bottom: 36px;
-    max-width: 282px;
-  }
-  .footer__copyright {
-    font-size: 14px;
+
+@media screen and (max-width: 768px){
+  .footer{
+    width: 100%;
   }
 }
