--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -1,133 +1,158 @@
 .profile {
-  max-width: 880px;
-  margin: 0 auto;
   padding-top: 40px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+}
+
+.profile__content {
+  color: #ffff;
+  display: flex;
+  gap: 20px;
   align-items: center;
 }
-.profile__picture {
+
+.profile__image-container {
+  position: relative; 
   border-radius: 50%;
-  max-width: 120px;
-  margin-right: 30px;
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
 }
-.profile__information {
-  margin-right: auto;
+
+.profile__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: filter 0.3s ease;
+}
+
+.profile__image-container:hover .profile__image {
+  filter: brightness(50%);
+}
+
+.profile__image-container:hover::after {
+  opacity: 1;
+}
+
+.profile__image-container::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
+  background-image: url("../images/edit.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 10;
+}
+
+.profile__text {
+  align-items: center;
+}
+
+.profile__title {
   display: flex;
-  flex-direction: column;
-  row-gap: 16px;
+  align-items: center;
+  width: 100%;
+  gap: 18px;
 }
-.profile__name-and-icon {
-  display: flex;
-  justify-content: flex-start;
-  column-gap: 18px;
-}
+
 .profile__name {
-  font-family: "Inter", Arial, sans-serif;
   font-size: 42px;
-  font-weight: 500;
-  line-height: 1.14;
+  line-height: 48px;
+  max-width: 373px;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 500px;
 }
-.profile__edit-icon {
+
+.profile__edit {
   width: 24px;
+  min-width: 24px;
   height: 24px;
-  margin-top: 15px;
-}
-.profile__edit-icon:hover {
+  background-color: #000000;
+  background-image: url("../images/Edit.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 50% 50%;
+  border: 1px solid #ffffff;
   cursor: pointer;
-  opacity: 0.6;
 }
-.profile__description {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 400;
+
+.profile__edit:hover {
+  opacity: .4;
+}
+
+.profile__about {
   font-size: 18px;
-  line-height: 1.21;
-  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-.profile__add-button {
+
+.profile__add {
   width: 150px;
-  background-color: #000;
-  border: 2px solid #fff;
-  padding: 14px 64px;
-}
-.profile__add-button:hover {
   cursor: pointer;
-  opacity: 0.6;
+  height: 50px;
+  border: 2px solid #ffffff;
+  background-color: #000000;
+  background-image: url("../images/add.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 22px;
+  box-sizing: border-box;
+  border-radius: 2px;
+  padding: 0;
+  flex: 0 0 auto;
 }
-.profile__add-button-plus-sign {
-  width: 22px;
+
+.profile__add:hover {
+  opacity: .4;
 }
-@media screen and (max-width: 1024px) {
+
+@media screen and (min-width: 320px) and (max-width: 720px) {
   .profile {
-    max-width: 700px;
+      flex-direction: column;
+      align-items: center;
   }
-  .profile__picture {
-    margin-right: 20px;
+
+  .profile__content {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
   }
-  .profile__information {
-    max-width: 400px;
+
+  .profile__text {
+      flex-direction: column;
+      align-items: center;
   }
-  .profile__name-and-icon {
-    column-gap: 14px;
-  }
+
   .profile__name {
-    font-size: 36px;
-    max-width: 360px;
+      font-size: 22px;
+      max-width: 196px;
   }
-  .profile__edit-icon {
-    margin-top: 10px;
+
+  .profile__edit {
+      width: 18px;
+      height: 18px;
   }
-  .profile__description {
-    font-size: 16px;
+
+  .profile__add {
+      width: 282px;
   }
 }
-@media screen and (max-width: 720px) {
+
+@media screen and (min-width: 415px) and (max-width: 768px) {
   .profile {
-    max-width: 282px;
-    margin: 0 auto;
-    padding-top: 42px;
+    display: flex;
     flex-direction: column;
-  }
-  .profile__picture {
-    margin-right: 0;
-    margin-bottom: 30px;
-  }
-  .profile__information {
-    margin-right: 0;
-    margin-bottom: 36px;
-    row-gap: 14px;
-    max-width: 282px;
-  }
-  .profile__name-and-icon {
-    justify-content: center;
-    column-gap: 10px;
-  }
-  .profile__name {
-    font-size: 22px;
-    line-height: 1.21;
-    max-width: 320px;
-  }
-  .profile__edit-icon {
-    width: 18px;
-    height: 18px;
-    margin-top: 4px;
-  }
-  .profile__description {
-    font-size: 14px;
-    text-align: center;
-  }
-  .profile__add-button {
-    width: 100%;
-    background-color: #000;
-    border: 2px solid #fff;
-    padding: 17px 133px;
-  }
-  .profile__add-button-plus-sign {
-    width: 16px;
+    align-items: center;
   }
 }
